--- a/pychronia_common/static/MetalRadiance/scss/_dropdown_menu_mobile.scss
+++ b/pychronia_common/static/MetalRadiance/scss/_dropdown_menu_mobile.scss
@@ -9,7 +9,7 @@ ul.dropmenu {
       text-decoration: none;
       line-height: 27px;
       padding: 0px 6px;
-      text-align: center;
+      text-align: left;
       float: none;
 
       &:hover {
