--- a/pychronia_common/static/MetalRadiance/scss/_globals.scss
+++ b/pychronia_common/static/MetalRadiance/scss/_globals.scss
@@ -149,7 +149,6 @@ $scroll_text_color: black;
     color: $medium_orange; //#f4ed62; //#ac8b28; // #cc9933;
     font-family: black_chancery, serif;
     margin: 2px;
-    text-align: center;
     letter-spacing: 0px
 }
 
