--- a/pychronia_common/static/MetalRadiance/scss/_standard_content.scss
+++ b/pychronia_common/static/MetalRadiance/scss/_standard_content.scss
@@ -6,6 +6,7 @@ h1 {
     font-size: 2em;
     color: $title_gold;
     margin-bottom: 20px;
+    text-align: center;
 
     &:before {
         top: 12px;
@@ -29,6 +30,7 @@ h2 {
     @include header_common;
     font-size: 1.7em;
     color: $title_white;
+    text-align: center;
 
     &:before {
         top: 0px;
